--- a/Mi artista favorito/styles.css
+++ b/Mi artista favorito/styles.css
@@ -7,6 +7,11 @@ body{
     background-color: rgb(193, 193, 193);
 }
 
+#titulo{
+    font-family: 'Rainbow';
+    font-size: 100px;
+}
+
 #discos{
     display: flex;
     flex-flow: row wrap;
@@ -34,4 +39,5 @@ header{
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
+    margin-bottom: 80px;
 }
