--- a/Workshop_tarjeta_de_presentacion/style.css
+++ b/Workshop_tarjeta_de_presentacion/style.css
@@ -24,17 +24,16 @@ main{
     margin: 2%;
 }
 
-button{
-    background: none;
-    border: none;
-}
-
 h1{
     font-weight: bolder;
 }
 
 h3{
     font-weight: 450;
+}
+
+li{
+    text-align: left;
 }
 
 .mainInfo section h2{
@@ -53,6 +52,20 @@ h3{
     padding: 0 5%;
 }
 
+.mainInfo section h2{
+    transition-property: font-size;
+    transition-duration: 1s;
+    transition-timing-function: linear;
+    font-size: 30px;
+}
+
+.mainInfo section h2:hover{
+    transition-property: font-size;
+    transition-duration: 2s;
+    transition-timing-function: linear;
+    font-size: 40px;
+}
+
 #perfil img{
     border-radius: 150px;
 }
@@ -69,8 +82,19 @@ h3{
 }
 
 #redes img{
+    transition-property: width, height;
+    transition-duration: 0.5s;
+    transition-timing-function: linear;
     width: 30px;
     height: 30px;
+}
+
+#redes img:hover{
+    transition-property: width, height;
+    transition-duration: 1s;
+    transition-timing-function: linear;
+    width: 35px;
+    height: 35px;
 }
 
 #titulo{
@@ -87,7 +111,11 @@ h3{
 }
 
 /* Responsive */
-@media screen and (max-width: 800px) {
+/* El limite de anchura está determinado por la anchura máxima
+del dispositivo móvil más grande, es decir, la tableta. Estas
+referencias fueron tomadas del simulador de responsive del
+navegdor */
+@media screen and (max-width: 768px) {
     header{
         display: flex;
         align-items: center;
@@ -112,23 +140,26 @@ h3{
     }
 
     .mainInfo{
-        padding: 5%;
+        display: none;
     }
-
-    .mainInfo section p{
-            display: none;
-        }
     
     #titulo{
         display: none;
     }
 
     #redes img{
+        transition-property: width, height;
+        transition-duration: 0.5s;
+        transition-timing-function: linear;
         width: 50px;
         height: 50px;
     }
 
-    #bio:hover ~ p{
-        display: inline;
+    #redes img:active{
+        transition-property: width, height;
+        transition-duration: 1s;
+        transition-timing-function: linear;
+        width: 55px;
+        height: 55px;
     }
 }
